--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,11 @@ spring.datasource.url=jdbc:h2:file:./data/User
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=
 spring.datasource.password=
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+server.port=8085
+
 jwt.secret=bergberg
+spring.devtools.remote.secret=secret
